After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 612772 - GtkTextView inline checker does not remove red dots under final line
GtkTextView inline checker does not remove red dots under final line
Status: RESOLVED FIXED
Product: gspell
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gspell maintainers
gspell maintainers
Depends on:
Blocks:
 
 
Reported: 2010-03-13 05:07 UTC by Garrett Regier
Modified: 2016-02-11 16:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot of the red dots on final line (128.88 KB, image/png)
2010-03-13 05:07 UTC, Garrett Regier
Details

Description Garrett Regier 2010-03-13 05:07:23 UTC
Created attachment 156044 [details]
screenshot of the red dots on final line

Type a few paragraphs.
Enable autospell check.
Open Set Language.
Close Set Language.
Disable autospell check.

Should happen:
    no red dots under final line.

What does happen:
    there are red dots under final line.
Comment 1 Paolo Borelli 2010-03-13 15:42:08 UTC
indeed... feel like investigating this one? (I ask since you already contributed many pathces)
Comment 2 Sébastien Wilmet 2015-07-20 12:35:38 UTC
Still a problem with gedit 3.17.
Comment 3 Sébastien Wilmet 2015-11-20 14:53:53 UTC
Re-assign to gspell.
Comment 4 Sébastien Wilmet 2016-02-11 16:59:20 UTC
Fixed with an easy workaround:
https://git.gnome.org/browse/gspell/commit/?id=db31377c64cdd8729a1c61b78471fc4fb05d7d75

Hopefully one day the bug will be properly fixed in GtkTextView.