inline-checker-text-buffer: work around drawing issue with underline

Fixing properly the bug in GtkTextView is more complicated. So in the
meantime, it's better to have something working well.

https://bugzilla.gnome.org/show_bug.cgi?id=612772